--- a/src/components/Forms/PagesForm/pagesForm.module.scss
+++ b/src/components/Forms/PagesForm/pagesForm.module.scss
@@ -20,6 +20,11 @@
         color: rgb(50, 50, 148);
       }
     }
+    .pageWord {
+      color: orange;
+      font-size: 15px;
+      margin-left: 5px;
+    }
     .letter {
       margin-right: 5px;
       color: white;
@@ -31,12 +36,14 @@
       margin-right: 5px;
       cursor: pointer;
       text-decoration: underline;
+      color: orange;
     }
     .input {
       border: none;
       outline: none;
       margin: 0 5px;
       height: 20px;
+      width: 100px;
     }
   }
 }
