--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,21 +1,18 @@
 .header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: rgb(94, 89, 89);
   height: 70px;
+  padding: 0 30px;
   .logo {
     border: 2px solid orange;
     padding: .3rem;
     color: orange;
     font-size: 25px;
     font-weight: bold;
-    margin-left: 30px;
   }
   .nav-bar {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 30px;
-    flex: 50%;
     .nav-bar__item {
       color: white;
       text-decoration: underline;
