--- a/src/pages/Main/main.scss
+++ b/src/pages/Main/main.scss
@@ -1,3 +1,11 @@
 .main-page {
   display: flex;
+  height: calc(100vh - 70px);
+  &__aside {
+    width: 300px;
+    min-width: 300px;
+  }
+  &__content {
+    flex-grow: 1;
+  }
 }
