fixed aside flexibility and also changed different simple incorects like names of files first letter from Upper-case

--- a/src/components/WordsOnMainPage/wordsOnMainPage.module.scss
+++ b/src/components/WordsOnMainPage/wordsOnMainPage.module.scss
@@ -1,5 +1,5 @@
 .words-box {
-  height: calc(100vh - 140px);
+  // height: calc(100vh - 140px);
   overflow-y: scroll;
 
   border-bottom: 2px solid rgb(216, 213, 213);
