--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -4,6 +4,12 @@
   &__aside {
     width: 300px;
     min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    &__list {
+      flex-grow: 1;
+      overflow-y: scroll;
+    }
   }
   &__content {
     flex-grow: 1;
