--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -7,7 +7,7 @@
   padding: 0 30px;
   .logo {
     border: 2px solid orange;
-    padding: .3rem;
+    padding: 0.3rem;
     color: orange;
     font-size: 25px;
     font-weight: bold;
