--- a/src/common/components/Pagination/Pagination.module.scss
+++ b/src/common/components/Pagination/Pagination.module.scss
@@ -21,11 +21,12 @@
   &__text {
     color: white;
   }
-  &__total-pages {
-    color: rgb(228, 228, 228);
+  &__page {
     cursor: pointer;
     text-decoration: underline;
     color: orange;
+    font-size: 13px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   &__form {
     &__input {
@@ -33,6 +34,7 @@
       outline: none;
       width: 60px;
       height: 20px;
+      border-radius: 5px;
     }
   }
 }
