--- a/src/components/Forms/SearchForm/serachForm.module.scss
+++ b/src/components/Forms/SearchForm/serachForm.module.scss
@@ -1,21 +1,32 @@
 .search-form {
   display: flex;
+  padding: 5.5px;
+  background-color: rgb(53, 50, 50);
   &__input {
     flex-grow: 1;
-    padding: 5px 2px;
-    border: none;
+    padding: 6px;
     outline: none;
-    border-bottom: 1px solid black;
+    border: none;
+    border-radius: 4px 0 0 4px;
   }
   &__button {
-    border: 1px solid orange;
-    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 14px;
+    border: none;
+    outline: none;
     cursor: pointer;
-    background-color: white;
+    background-color: orange;
+    border-radius: 0px 4px 4px 0;
+    &__icon {
+      width: 13px;
+      height: 13px;
+      color: white;
+    }
 
     &:hover {
-      background-color: orange;
-      color: white;
+      background-color: rgb(243, 183, 73);
     }
   }
 }
