tables - styled noun table and also added opportunity to generate table for different parts of language which has the same table appearance

--- a/src/common/components/TableContainer/TableContainer.module.scss
+++ b/src/common/components/TableContainer/TableContainer.module.scss
@@ -6,7 +6,7 @@
     margin: 0 auto;
     padding: 7px;
     &__word {
-      color: rgb(52, 52, 221);
+      color: black;
       font-weight: 700;
     }
     &__dash {
