--- a/src/components/Tables/Noun/Noun.module.scss
+++ b/src/components/Tables/Noun/Noun.module.scss
@@ -4,25 +4,23 @@
   &__head {
     &__row {
       display: flex;
-      justify-content: space-between;
-      color: rgb(51, 51, 187);
-      border-bottom: 2px solid rgb(51, 51, 187);
-      padding: 5px;
+      justify-content: space-around;
+      color: black;
+      border-bottom: 2px solid orange;
+      padding: 7px;
     }
   }
   &__body {
     display: flex;
-    justify-content: space-between;
     &__conjunction {
       display: flex;
       flex-direction: column;
-      color: rgb(51, 51, 187);
-      font-weight: 500;
-      flex-grow: 1;
+      color: rgb(68, 66, 66);
+      font-weight: bold;
+      flex-grow: 0.7;
       &__item {
-        flex-grow: 1;
-        border-bottom: 2px solid rgb(51, 51, 187);
-        padding: 10px 4px 5px 4px;
+        border-bottom: 2px solid orange;
+        padding: 10px 4px 10px 4px;
       }
     }
     &__row {
@@ -31,7 +29,7 @@
       flex-grow: 1;
       &__item {
         border-bottom: 1px solid rgb(187, 186, 186);
-        padding: 10px 4px 10px 4px;
+        padding: 10px 4px 11px 4px;
       }
     }
   }
