--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(94, 89, 89);
   height: 70px;
   padding: 0 30px;
+  background-color: rgb(131, 123, 123);
   &__logo {
     border: 2px solid orange;
     padding: 0.3rem;
@@ -14,7 +14,7 @@
   }
   &__nav-bar {
     &__item {
-      color: white;
+      color: orange;
       text-decoration: underline;
 
       &:hover {
