--- a/src/components/Tables/Adjective/Adjective.module.scss
+++ b/src/components/Tables/Adjective/Adjective.module.scss
@@ -11,23 +11,26 @@
     }
     &__row {
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
       border-bottom: 2px solid orange;
       padding: 10px;
       position: relative;
       &__item {
-        &:nth-child(3) {
-          margin: 0 120px;
+        &:nth-child(2) {
+          margin-left: 90px;
+        }
+        &:nth-child(4) {
+          margin-right: 150px;
         }
         &:last-child {
           position: absolute;
-          right: 20px;
+          right: 40px;
           top: -12px;
         }
         &:first-child {
           position: absolute;
           top: -12px;
-          left: 20px;
+          left: 40px;
         }
       }
     }
@@ -44,6 +47,7 @@
         align-items: center;
         border-bottom: 2px solid orange;
         height: 54px;
+        padding: 10px;
       }
     }
     &__column {
@@ -57,6 +61,7 @@
         border-bottom: 1px solid rgb(187, 186, 186);
         height: 55px;
         width: 165px;
+        padding: 10px;
       }
     }
   }
