tables - created table cardinal numbers and also added tables for all verbs

--- a/src/common/components/TableContainer/TableContainer.module.scss
+++ b/src/common/components/TableContainer/TableContainer.module.scss
@@ -10,6 +10,7 @@
     }
     &__dash {
       color: rgb(128, 120, 120);
+      margin: 0 5px;
     }
     &__part {
       color: rgb(128, 120, 120);
