--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -5,6 +5,9 @@
     display: flex;
     flex-direction: column;
     min-width: 340px;
+    @media (min-width: 320px) {
+      min-width: 320px;
+    }
     &__list {
       flex-grow: 1;
       overflow-y: scroll;
