subscription - added meanings to subscription component and if no definitions added message

--- a/src/components/SubscriptionForWord/Subscription.module.scss
+++ b/src/components/SubscriptionForWord/Subscription.module.scss
@@ -1,7 +1,8 @@
-.subscription-tab {
-  display: flex;
-  flex-direction: column;
-  &__element {
-    padding: 10px;
+.subscription {
+  &__item {
+    &__definition {
+    }
+    &__meaning {
+    }
   }
 }
