subscription - styled subscription component and make tabs fixed and body of tab sudscription will scroll

--- a/src/common/components/Tabs/tabs.module.scss
+++ b/src/common/components/Tabs/tabs.module.scss
@@ -1,4 +1,5 @@
 .tabs {
+  height: calc(100vh - 115px);
   &__titles {
     display: flex;
     position: relative;
@@ -45,5 +46,7 @@
 
   &__content {
     padding: 10px;
+    overflow-y: scroll;
+    height: 100%;
   }
 }
