--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     min-width: 340px;
-    @media (min-width: 320px) {
+    @media (max-width: 500px) and (min-width: 320px) {
       min-width: 320px;
     }
     &__list {
