dev - aligned text when no subscription for word by center and when clicking on the word in the list save this word to search input

--- a/src/components/SubscriptionForWord/Subscription.module.scss
+++ b/src/components/SubscriptionForWord/Subscription.module.scss
@@ -7,4 +7,8 @@
 
 .not-found {
   font-size: 30px;
+  height: calc(100vh - 170px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
